@startuml
title ERD Sistem Informasi Akademik

entity mahasiswa {
   * id : bigint
   --
   nim : varchar
   nama : varchar
   email : varchar
   semester : int
   status : varchar
   program_studi_id : bigint
}

entity program_studi {
   * id : bigint
   --
   kode_prodi : varchar
   nama_prodi : varchar
}

entity users {
   * id : bigint
   --
   username : varchar
   password : varchar
   role : enum
}

program_studi ||--o{ mahasiswa
users ||--o{ mahasiswa

@enduml